# parallel-multiscale

./: LICENSE  README.md
matrix_analysis/: MatrixAnalysis.md  truncation_pre.py  truncation_test.py
parallel_code/: CMakeLists.txt  ParallelExecution.md  complete_approximant.cu  iterative_parallel_methods.cuh  macros.h  main.cu  main_times.cu  multiscale_approximation_job.sh  multiscale_structure.cuh  wendland_functions_device.cuh
